# framework

./: .gitignore  .golangci.yml  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  go.mod  go.sum  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/agents/: scrum-master.md
.claude/hooks/: orchestra-mcp-hook.sh
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_request.yml
.github/workflows/: ci.yml
.projects/: README.md  claude-sync.toon  limits.toon  project-status.toon  usage.toon
.projects/oap-chrome/: prd.md  project-status.toon  requests.toon
.projects/oap-cloud/: prd.md  project-status.toon  requests.toon
.projects/oap-core/: COMPREHENSIVE-STATUS-REPORT.md  FINAL-VERIFICATION-SUMMARY.md  prd.md  project-status.toon  requests.toon
.projects/oap-design/: prd.md  project-status.toon  requests.toon
.projects/oap-devops/: prd.md  project-status.toon  requests.toon
.projects/oap-mobile/: prd.md  project-status.toon  requests.toon
.projects/oap-packages/: prd.md  project-status.toon  requests.toon
.projects/oap-services/: prd.md  project-status.toon  requests.toon
app/plugins/: context.go  contracts.go  contributes.go  features.go  loader.go  manager.go  manifest.go  registry.go
cmd/plugin/: generator.go  generator_test.go  lister.go  main.go  registry.go  validator.go
cmd/server/: main.go
config/: plugins.go  plugins_registry.go
engine/: Cargo.toml  build.rs
engine/src/: db.rs  main.rs
engine/src/services/: memory.rs
proto/: memory.proto  search.proto
(+1152 files in other folders)
