[package]
name = "orchestra-engine"
version = "1.0.0"
edition = "2021"
description = "Orchestra engine — gRPC services for RAG memory, code parsing, and search"

[[bin]]
name = "orchestra-engine"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Full-text search
tantivy = "0.22"

# Local SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
thiserror = "2"

[build-dependencies]
tonic-build = "0.12"
